# lecture_function_calling

./: .dockerignore  .env.sample  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: 00_load_env.md  01_simple_chat.md  02_function_calling_basics.md  03_tools.md  04_structured_output.md  05_execise.md
lecture_function_calling/: add.go  detect_objects.py  exercise1.py  exercise2-2.py  exercise2.py  function_calling_basic.py  function_calling_basics.py  pydantic_sample.py  search_tools.py  simple_chat.py  structured_output.py  subproecess.py
