[project]
name = "lecture-function-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain-openai>=0.2.9",
    "langchain>=0.3.7",
    "python-dotenv>=1.0.1",
    "langchain-anthropic>=0.3.0",
    "langchain-google-vertexai>=2.0.7",
    "langchain-community>=0.3.7",
    "duckduckgo-search>=6.3.5",
    "wikipedia>=1.4.0",
    "pillow>=11.0.0",
]


[tool.uv]
dev-dependencies = ["ruff>=0.7.4"]
